--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,9 @@
             <version>4.11</version>
         </dependency>
         <dependency>
-            <groupId>org.concordion</groupId>
-            <artifactId>concordion</artifactId>
-            <version>1.4.3</version>
+            <groupId>org.agileinsider</groupId>
+            <artifactId>concordion-plus</artifactId>
+            <version>1.1.2</version>
         </dependency>
     </dependencies>
 </project>
